--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,23 @@ height: auto;
 }
 .logo-secondary{
   width:200px;
+  margin-top: 10px;
+  margin-bottom: 11px;
 }
-
+.footer-divider{
+border: 1px solid  #74c4e4;
+}
+.terms-condition{
+font-size: 10px;
+color: #74c4e4;
+}
+.lower-footer{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+    padding-top: 10px;
+  }
   
 .list{
     padding-top: 48px;
@@ -46,14 +61,14 @@ height: auto;
   margin-bottom:70px;
 }
   .profile-img {
-    height: 128px;
-    width: 143px;
+    height: 105px;
+    width: 109px;
     background: url("./assets/pexels-photo-1239291.jpeg");
     background-size: cover;
     background-position: center;
     position: absolute;
-    top: -25px;
-    left: -25px;
+    top: -29px;
+    left: -30px;
     border-radius: 50%;
     
   }
@@ -143,38 +158,95 @@ height: auto;
        font-size:12px;
   }
   .profile-img2 {
-    height: 128px;
-    width: 143px;
+    height: 105px;
+    width: 109px;
     background: url("./assets/pexels-photo-220453.jpeg");
     background-size: cover;
     background-position: center;
     position: absolute;
-    top: -25px;
-    left: -25px;
+    top: -29px;
+    left: -30px;
     border-radius: 50%;
     
   }
   .profile-img3 {
-    height: 128px;
-    width: 143px;
+    height: 105px;
+    width: 109px;
     background: url("./assets/pexels-photo-1024311.jpeg");
     background-size: cover;
     background-position: center;
     position: absolute;
-    top: -25px;
-    left: -25px;
+    top: -29px;
+    left: -30px;
     border-radius: 50%;
     
   }
   .profile-img4 {
-    height: 128px;
-    width: 143px;
+    height: 105px;
+    width: 109px;
     background: url("./assets/pexels-photo-1222271.jpeg");
     background-size: cover;
     background-position: center;
     position: absolute;
-    top: -25px;
-    left: -25px;
+    top: -29px;
+    left: -30px;
     border-radius: 50%;
     
+  }
+  .navbar-toggler-icon{
+    width:1em !important;
+  }
+.dropdown-menu{
+  top: 49px !important;
+    right: -36% !important;
+    background-color: #17a2b8 !important;
+    min-width: 26rem !important;
+  }
+  .text-divider{
+    border-left: 1px solid #17a2b8;
+    height: 17px;
+    margin-left: 7px;
+    margin-right: 7px;
+    display: inline;
+}
+
+
+
+  @media only screen and (max-width: 768px){
+    .navbar-container{
+      display: flex;
+    }
+    .links{
+      display: none;
+    }
+    #login-container{
+      
+      padding: 10px !important;
+      width: 336px !important;
+    }
+    .card-name{
+    font-size: 17px !important;
+  }
+    .dropdown-menu{
+    top: 49px !important;
+    right: -13% !important;
+    background-color: #17a2b8 !important;
+    min-width: 21rem !important;
+  }
+  .footer-row{
+    display: block !important;
+    margin-left: 0px !important;
+  }
+  .footer-icon{
+  margin-bottom: 22px !important;
+}
+.social{
+font-size: 11px !important;
+}
+.image{
+left: -11px !important;
+height: 85px !important;
+    width: 90px !important;
+  }
+  
   }
